[package]
name = "rust-jvm"
version = "0.1.0"
authors = ["comradeHsu <61239289@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".","class_file"]

[dependencies]
lark-classfile = { path = "class_file", version = "0.1.0" }
zip = "0.5.3"
podio = "0.1.6"
chrono = "0.4"
num_cpus = "1.12.0"
rc-zip = "0.0.1"
positioned-io = "0.2.2"